--- a/pinch/templates/big_idea.html
+++ b/pinch/templates/big_idea.html
@@ -53,7 +53,7 @@
 
     <div class="container">
 
-      <h1>{% block page_title %}Create Project{% endblock page_title %}</h1>
+      <h1>{% block page_title %}Big Idea{% endblock page_title %}</h1>
 
       {% block content %}
           <p>Who got a project?  Now you do!</p>
