--- a/pinch/templates/gravity_board.html
+++ b/pinch/templates/gravity_board.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
   {% block content %}
-      <h1>{% block page_title %}Big Idea{% endblock page_title %}</h1>
+      <h1>{% block page_title %}Gravity Board{% endblock page_title %}</h1>
       <p></p>
   {% endblock content %}
