--- a/pinch/static/css/sass/pinch.scss
+++ b/pinch/static/css/sass/pinch.scss
@@ -2,4 +2,14 @@
 @import "variables";
 @import "bootstrap";
 
-body { background:#fbf; }
+body { background:#fff; }
+
+h1 {
+	span { font-size:.4em; }
+}
+
+// Venn diagram
+
+.venn {
+
+}
