--- a/pinch/templates/big_idea.html
+++ b/pinch/templates/big_idea.html
@@ -1,6 +1,39 @@
 {% extends "base.html" %}
 
   {% block content %}
-      <h1>{% block page_title %}Big Idea{% endblock page_title %}</h1>
-      <p></p>
+      <div class="row">
+
+        <div class="col-md-1">Icon</div>
+
+        <div class="col-md-8">
+
+          <h1>{% block page_title %}The Big Idea{% endblock page_title %} <span>5-15 Minutes</span></h1>
+          <form role="form">
+            <div class="form-group">
+              <textarea class="form-control" rows="3" id="bigIdea" placeholder="What are we doing?"></textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Next</button>
+          </form>
+
+          <h1>Validate <span>5-15 Minutes</span></h1>
+          <form role="form venn">
+            <div class="row">
+              <div class="form-group col-md-4">
+                <input type="text" class="form-control" id="offering" placeholder="Offering">
+              </div>
+              <div class="form-group col-md-4">
+                <input type="text" class="form-control" id="valueProp" placeholder="Value proposition">
+              </div>
+              <div class="form-group col-md-4">
+                <input type="text" class="form-control" id="customer" placeholder="Customer">
+              </div>
+            </div>
+            <button type="submit" class="btn btn-default">Next</button>
+          </form>
+
+        </div>
+
+        <div class="col-md-3">Info bar</div>
+
+      </div>
   {% endblock content %}
