--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -9,10 +9,11 @@
         <div class="col-md-8">
 
           <h1>{% block page_title %}Start a new project{% endblock page_title %}</h1>
-          <form role="form">
+          <form role="form" method="post">
+              {% csrf_token %}
             <div class="form-group">
               <label for="projectName">Project name</label>
-              <input type="text" class="form-control" id="projectName" placeholder="Project name">
+              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Project name">
             </div>
             <button type="submit" class="btn btn-default">Get started</button>
           </form>
