--- a/pinch/static/css/sass/_variables.scss
+++ b/pinch/static/css/sass/_variables.scss
@@ -9,6 +9,10 @@
 
 //== Colors
 //
+
+$color-primary:		#f8bf51;
+$color-bg:			#f8f7f7;
+
 //## Gray and brand colors for use across Bootstrap.
 
 //$gray-darker:            lighten(#000, 13.5%); // #222
