--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -3,12 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}pinch{% endblock title %}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
     <!-- Le styles -->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <style>
       body {
