--- a/pinch/static/css/sass/pinch.scss
+++ b/pinch/static/css/sass/pinch.scss
@@ -2,10 +2,29 @@
 @import "variables";
 @import "bootstrap";
 
-body { background:#fff; }
+.float-right {
+	float:right;
+}
+
+body {
+	background:$color-bg;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight:300;
+}
 
 h1 {
+	font-weight:300;
 	span { font-size:.4em; }
+}
+
+h2 { font-size:1.5em; font-style:italic; font-weight:300; margin-top:5px; margin-bottom:30px; }
+
+form {
+	label { font-weight:300; }
+	input[type="text"] {
+		font-size:21px;
+		padding:25px 15px;
+	}
 }
 
 // Venn diagram
