--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -8,14 +8,15 @@
 
         <div class="col-md-8">
 
-          <h1>{% block page_title %}Start a new project{% endblock page_title %}</h1>
+          <h1>{% block page_title %}Create your project{% endblock page_title %}</h1>
+          <h2>Give your project a name.</h2>
           <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
               <label for="projectName">Project name</label>
-              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Project name">
+              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Keep it simple">
             </div>
-            <button type="submit" class="btn btn-default">Get started</button>
+            <button type="submit" class="btn btn-default float-right">Get started</button>
           </form>
 
         </div>
