--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -64,6 +64,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery-sortable.js' %}"></script>
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/pinch.js' %}"></script>
