--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -7595,27 +7595,39 @@ button.close {
   }
 }
 /* line 5, sass/pinch.scss */
-.float-right {
+button[type="submit"] {
+  background-color: #f8bf51;
+  border-top: none;
+  border-right: none;
+  border-bottom: 2px solid #8d9497;
+  border-left: 2px solid #8d9497;
+  color: #fff;
   float: right;
+  font-size: 21px;
+  font-weight: 300;
+}
+/* line 15, sass/pinch.scss */
+button[type="submit"].btn {
+  border-radius: 0;
 }
 
-/* line 9, sass/pinch.scss */
+/* line 20, sass/pinch.scss */
 body {
   background: #f8f7f7;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
 }
 
-/* line 15, sass/pinch.scss */
+/* line 26, sass/pinch.scss */
 h1 {
   font-weight: 300;
 }
-/* line 17, sass/pinch.scss */
+/* line 28, sass/pinch.scss */
 h1 span {
   font-size: .4em;
 }
 
-/* line 20, sass/pinch.scss */
+/* line 31, sass/pinch.scss */
 h2 {
   font-size: 1.5em;
   font-style: italic;
@@ -7624,12 +7636,15 @@ h2 {
   margin-bottom: 30px;
 }
 
-/* line 23, sass/pinch.scss */
+/* line 34, sass/pinch.scss */
 form label {
   font-weight: 300;
 }
-/* line 24, sass/pinch.scss */
+/* line 35, sass/pinch.scss */
 form input[type="text"] {
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
   font-size: 21px;
   padding: 25px 15px;
 }
