--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -16,7 +16,7 @@
               <label for="projectName">Project name</label>
               <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Keep it simple">
             </div>
-            <button type="submit" class="btn btn-default float-right">Get started</button>
+            <button type="submit" class="btn btn-default square">get started</button>
           </form>
 
         </div>
