--- a/pinch/static/css/sass/_variables.scss
+++ b/pinch/static/css/sass/_variables.scss
@@ -10,8 +10,9 @@
 //== Colors
 //
 
-$color-primary:		#f8bf51;
-$color-bg:			#f8f7f7;
+$color-primary:			#f8bf51;
+$color-bg:				#f8f7f7;
+$color-button-border:	#8d9497;
 
 //## Gray and brand colors for use across Bootstrap.
 
