Big idea styles

--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -14,7 +14,7 @@
             {% csrf_token %}
             <div class="form-group">
               <label for="projectName">Project name</label>
-              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Keep it simple">
+              <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Your great project name">
             </div>
             <button type="submit" class="btn btn-default square">get started</button>
           </form>
