--- a/pinch/static/css/sass/_variables.scss
+++ b/pinch/static/css/sass/_variables.scss
@@ -13,6 +13,7 @@
 $color-primary:			#f8bf51;
 $color-bg:				#f8f7f7;
 $color-button-border:	#8d9497;
+$color-text:			#333333;
 
 //## Gray and brand colors for use across Bootstrap.
 
