--- a/pinch/static/css/sass/pinch.scss
+++ b/pinch/static/css/sass/pinch.scss
@@ -19,6 +19,7 @@ button[type="submit"] {
 
 body {
 	background:$color-bg;
+	color:$color-text;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight:300;
 }
@@ -28,16 +29,24 @@ h1 {
 	span { font-size:.4em; }
 }
 
-h2 { font-size:1.5em; font-style:italic; font-weight:300; margin-top:5px; margin-bottom:30px; }
+h2 { font-size:1.5em; font-style:italic; font-weight:300; margin-top:5px; margin-bottom:30px;
+	span { font-weight:normal; }
+}
 
 form {
 	label { font-weight:300; }
-	input[type="text"] {
+	input[type="text"], textarea.form-control {
 		border:none;
 		border-radius:0;
 		box-shadow:none;
 		font-size:21px;
+	}
+	input[type="text"] {
 		padding:25px 15px;
+	}
+	textarea.form-control {
+		padding:10px 15px;
+		height:10em;
 	}
 }
 
