--- a/pinch/templates/create_mvp.html
+++ b/pinch/templates/create_mvp.html
@@ -3,22 +3,22 @@
   {% block content %}
       <div class="row">
 
-          <div class="col-md-1">Icon</div>
+        <div class="col-md-1">Icon</div>
 
-          <div class="col-md-8">
+        <div class="col-md-8">
 
-              <h1>{% block page_title %}{{ project.name }} - Create MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
-              <form role="form" method="post">
-                  {% csrf_token %}
-                  <div class="form-group">
-                      <textarea class="form-control" rows="3" name="original_statement" id="original_statement" placeholder="">{{ project.mvp.original_statement }}</textarea>
-                  </div>
-                  <button type="submit" class="btn btn-default">Next</button>
-              </form>
+          <h1>{% block page_title %}{{ project.name }} - Create MVP{% endblock page_title %}<span>5-15 Minutes</span></h1>
+          <form role="form" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <textarea class="form-control" rows="5" name="original_statement" id="original_statement" placeholder="To achiever our goal what is the minimum amount of work we need to do?  Provide a short walkthrough.">{{ project.idea }}</textarea>
+            </div>
+            <button type="submit" class="btn btn-default">Next</button>
+          </form>
 
-          </div>
+        </div>
 
-          <div class="col-md-3">Info bar</div>
+        <div class="col-md-3">Info bar</div>
 
       </div>
   {% endblock content %}
