--- a/pinch/templates/big_idea.html
+++ b/pinch/templates/big_idea.html
@@ -20,7 +20,16 @@
 
         </div>
 
-        <div class="col-md-3">Info bar</div>
+        <div class="col-md-3">
+          <div class="info-panel">
+            <p>Share your idea with the team, get some buy-in.</p>
+            <p>Timebox your effort, there should be a short deadline.</p>
+            <ul>
+              <li>2-10 Working Days is the recommended timebox for Pinch. Longer projects will benefit from more robust planning.</li>
+            </ul>
+            <p>Choose someone in the team to facilitate Pinch.</p>
+          </div>
+        </div>
 
       </div>
   {% endblock content %}
