--- a/pinch/templates/validate.html
+++ b/pinch/templates/validate.html
@@ -8,6 +8,7 @@
         <div class="col-md-8">
 
           <h1>{% block page_title %}Validate{% endblock page_title %} <span>5-15 Minutes</span></h1>
+          <h2><span>"Is this a project or a product?"</span> While all projects and products start with an idea, products actually have to be valuable to some identifiable market. If you want to build a product, you owe it to yourselves to find your value proposition.</h2>
           <form role="form venn" method="post">
             {% csrf_token %}
             <div class="row">
