--- a/pinch/static/css/sass/pinch.scss
+++ b/pinch/static/css/sass/pinch.scss
@@ -36,7 +36,7 @@ h2 { font-size:1.5em; font-style:italic; font-weight:300; margin-top:5px; margin
 form {
 	label { font-weight:300; }
 	input[type="text"], textarea.form-control {
-		border:none;
+		border:1px solid $color-border-color;
 		border-radius:0;
 		box-shadow:none;
 		font-size:21px;
@@ -48,6 +48,12 @@ form {
 		padding:10px 15px;
 		height:10em;
 	}
+}
+
+// Info panel
+
+.info-panel {
+	background-color:$color-border-color;
 }
 
 // Venn diagram
