--- a/pinch/static/css/sass/_variables.scss
+++ b/pinch/static/css/sass/_variables.scss
@@ -12,6 +12,7 @@
 
 $color-primary:			#f8bf51;
 $color-bg:				#f8f7f7;
+$color-bg-panel:		#feebc5;
 $color-button-border:	#8d9497;
 $color-text:			#333333;
 $color-border-color:	lighten($color-button-border, 30%);
