--- a/pinch/templates/big_idea.html
+++ b/pinch/templates/big_idea.html
@@ -10,18 +10,33 @@
 
           <h1>{% block page_title %}The Big Idea{% endblock page_title %} <span>5-15 Minutes</span></h1>
           <h2><span>"What are we doing?"</span> Let's get everyone on the same page and announce what the intention of our build is going to be.</h2>
+        </div>
+
+        <div class="col-md-3"></div>
+
+      </div>
+
+
+      <div class="row">
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-8">
           <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
               <textarea class="form-control" rows="3" name="bigIdea" id="bigIdea" placeholder="I want to build a product that does...">{{ project.idea }}</textarea>
             </div>
-            <button type="submit" class="btn btn-default">Next</button>
+            <div class="clearfix">
+              <button type="submit" class="btn btn-default">Next</button>
+            </div>
           </form>
 
         </div>
 
         <div class="col-md-3">
           <div class="info-panel">
+            <h3>Tips</h3>
             <p>Share your idea with the team, get some buy-in.</p>
             <p>Timebox your effort, there should be a short deadline.</p>
             <ul>
