Changed 'tech' verbiage to 'tools'

--- a/pinch/templates/select_tools.html
+++ b/pinch/templates/select_tools.html
@@ -13,7 +13,7 @@
           <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <textarea class="form-control" rows="3" name="tech" id="tech" placeholder="I want to build my product on...">{{ project.tech }}</textarea>
+              <textarea class="form-control" rows="3" name="tools" id="tools" placeholder="I want to build my product on...">{{ project.tools }}</textarea>
             </div>
             <button type="submit" class="btn btn-default">Next</button>
           </form>
