--- a/pinch/static/css/pinch.css
+++ b/pinch/static/css/pinch.css
@@ -7663,7 +7663,43 @@ form textarea.form-control {
   height: 10em;
 }
 
-/* line 56, sass/pinch.scss */
+/* line 59, sass/pinch.scss */
+.step-icon div {
+  margin-top: 28px;
+}
+/* line 61, sass/pinch.scss */
+.step-icon div.big-idea {
+  background: url("/static/images/icon-big-idea.png") no-repeat 0 0;
+  width: 64px;
+  height: 97px;
+  /*  Using retina image support
+   *  #my-element {
+   *    background:url('http://link.to/low-res-image.png');
+   *    @include respond-to(retina-display) {
+   *      background:url('http://link.to/high-res-image.png');
+   *      background-size:202px 27px; <-- Size of the low-res image
+   *  }
+   */
+  /*  @else if $media == wide-screens {
+      @media only screen and (min-width: $break-large) { @content; }
+    }*/
+}
+@media (-webkit-min-device-pixel-ratio: 2) {
+  /* line 61, sass/pinch.scss */
+  .step-icon div.big-idea {
+    background: url("/static/images/icon-big-idea@2x.png");
+    background-size: 64px 97px;
+  }
+}
+@media (min-resolution: 192dpi) {
+  /* line 61, sass/pinch.scss */
+  .step-icon div.big-idea {
+    background: url("/static/images/icon-big-idea@2x.png");
+    background-size: 64px 97px;
+  }
+}
+
+/* line 77, sass/pinch.scss */
 .info-panel {
   background-color: #feebc5;
   font-size: 18px;
