--- a/pinch/templates/create_project.html
+++ b/pinch/templates/create_project.html
@@ -4,16 +4,29 @@
 
       <div class="row">
 
-        <div class="col-md-1">Icon</div>
+        <div class="col-md-1 step-icon">
+          <div class="create-project"></div>
+        </div>
 
         <div class="col-md-8">
-
+          <small>&nbsp;</small>
           <h1>{% block page_title %}Create your project{% endblock page_title %}</h1>
           <h2>Give your project a name.</h2>
+        </div>
+
+          <div class="col-md-3"></div>
+
+      </div>
+
+
+      <div class="row">
+
+        <div class="col-md-1"></div>
+
+        <div class="col-md-8">
           <form role="form" method="post">
             {% csrf_token %}
             <div class="form-group">
-              <label for="projectName">Project name</label>
               <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Your great project name">
             </div>
             <button type="submit" class="btn btn-default square">get started</button>
@@ -21,7 +34,12 @@
 
         </div>
 
-        <div class="col-md-3">Info bar</div>
+        <div class="col-md-3">
+          <div class="info-panel">
+            <h3>Tips</h3>
+            <p>Some tips around creating a project.</p>
+          </div>
+        </div>
 
       </div>
 
