--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -11,6 +11,8 @@
     <!-- Le styles -->
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,200italic,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/codemirror.css' %}" rel="stylesheet">
+
     <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -65,6 +67,7 @@
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-sortable.js' %}"></script>
+    <script src="{% static 'js/codemirror.js' %}"></script>
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/pinch.js' %}"></script>
