--- a/pinch/templates/validate.html
+++ b/pinch/templates/validate.html
@@ -22,21 +22,23 @@
 
         <div class="col-md-1"></div>
 
-        <div class="col-md-8">
-          <form role="form venn" method="post">
+        <div class="col-md-8 venn">
+          <form role="form" method="post">
             {% csrf_token %}
             <div class="row">
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="offering" id="offering" placeholder="Offering">
+                <textarea name="offering" id="offering" placeholder="Offering"></textarea>
               </div>
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="valueProp" id="valueProp" placeholder="Value proposition">
+                <textarea name="valueProp" id="valueProp" placeholder="Value prop"></textarea>
               </div>
               <div class="form-group col-md-4">
-                <input type="text" class="form-control" name="customer" id="customer" placeholder="Customer">
+                <textarea name="customer" id="customer" placeholder="Customer"></textarea>
               </div>
             </div>
-            <button type="submit" class="btn btn-default">Next</button>
+            <div class="validate-action clearfix">
+              <button type="submit" class="btn btn-default">Next</button>
+            </div>
           </form>
 
         </div>
