Strikethrough working, breakdown added

--- a/pinch/templates/base.html
+++ b/pinch/templates/base.html
@@ -68,6 +68,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-sortable.js' %}"></script>
     <script src="{% static 'js/codemirror.js' %}"></script>
+    <script src="{% static 'js/underscore.js' %}"></script>
 
     <!-- place project specific Javascript in this file -->
     <script src="{% static 'js/pinch.js' %}"></script>
