--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -3,18 +3,18 @@
   {% block content %}
       <div class="row">
 
-          <div class="col-md-1">Icon</div>
+        <div class="col-md-1">Icon</div>
 
           <div class="col-md-8">
               <small>{{ project.name }}</small>
-              <h1>{% block page_title %}Minify MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
+              <h1>{% block page_title %}Create MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
 
               <div>
-                  <textarea id="strike_statement">{{ project.mvp.original_statement }}</textarea>
+                  <textarea id="highlight_statement">{{ project.mvp.original_statement }}</textarea>
               </div>
 
               <button id="clear" type="button" class="btn btn-default">Clear</button>
-              <button id="minify_next" type="submit" class="btn btn-default">Next</button>
+              <button id="highlight_next" type="submit" class="btn btn-default">Next</button>
           </div>
 
           <div class="col-md-3">Info bar</div>
@@ -22,8 +22,8 @@
       </div>
 
       <style>
-          .strikethrough {
-              text-decoration: line-through;
+          .highlight {
+              background-color: yellow;
           }
       </style>
   {% endblock content %}
