--- a/pinch/templates/breakdown_mvp.html
+++ b/pinch/templates/breakdown_mvp.html
@@ -7,7 +7,7 @@
 
           <div class="col-md-8">
               <small>{{ project.name }}</small>
-              <h1>{% block page_title %}Create MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
+              <h1>{% block page_title %}Breakdown MVP{% endblock page_title %} <span>5-15 Minutes</span></h1>
 
               <div>
                   <textarea id="highlight_statement">{{ project.mvp.original_statement }}</textarea>
